; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_sock.c_sock_recv_errqueue.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_sock.c_sock_recv_errqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.msghdr = type { i32 }
%struct.sock_exterr_skb = type { i32 }
%struct.sk_buff = type { i32 }

@EAGAIN = common dso_local global i32 0, align 4
@MSG_TRUNC = common dso_local global i32 0, align 4
@MSG_ERRQUEUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sock_recv_errqueue(%struct.sock* %0, %struct.msghdr* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.sock*, align 8
  %7 = alloca %struct.msghdr*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.sock_exterr_skb*, align 8
  %12 = alloca %struct.sk_buff*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.sock* %0, %struct.sock** %6, align 8
  store %struct.msghdr* %1, %struct.msghdr** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %15 = load i32, i32* @EAGAIN, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %14, align 4
  %17 = load %struct.sock*, %struct.sock** %6, align 8
  %18 = call %struct.sk_buff* @sock_dequeue_err_skb(%struct.sock* %17)
  store %struct.sk_buff* %18, %struct.sk_buff** %12, align 8
  %19 = load %struct.sk_buff*, %struct.sk_buff** %12, align 8
  %20 = icmp eq %struct.sk_buff* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %5
  br label %66

22:                                               ; preds = %5
  %23 = load %struct.sk_buff*, %struct.sk_buff** %12, align 8
  %24 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %13, align 4
  %26 = load i32, i32* %13, align 4
  %27 = load i32, i32* %8, align 4
  %28 = icmp sgt i32 %26, %27
  br i1 %28, label %29, label %36

29:                                               ; preds = %22
  %30 = load i32, i32* @MSG_TRUNC, align 4
  %31 = load %struct.msghdr*, %struct.msghdr** %7, align 8
  %32 = getelementptr inbounds %struct.msghdr, %struct.msghdr* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = or i32 %33, %30
  store i32 %34, i32* %32, align 4
  %35 = load i32, i32* %8, align 4
  store i32 %35, i32* %13, align 4
  br label %36

36:                                               ; preds = %29, %22
  %37 = load %struct.sk_buff*, %struct.sk_buff** %12, align 8
  %38 = load %struct.msghdr*, %struct.msghdr** %7, align 8
  %39 = load i32, i32* %13, align 4
  %40 = call i32 @skb_copy_datagram_msg(%struct.sk_buff* %37, i32 0, %struct.msghdr* %38, i32 %39)
  store i32 %40, i32* %14, align 4
  %41 = load i32, i32* %14, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %36
  br label %63

44:                                               ; preds = %36
  %45 = load %struct.msghdr*, %struct.msghdr** %7, align 8
  %46 = load %struct.sock*, %struct.sock** %6, align 8
  %47 = load %struct.sk_buff*, %struct.sk_buff** %12, align 8
  %48 = call i32 @sock_recv_timestamp(%struct.msghdr* %45, %struct.sock* %46, %struct.sk_buff* %47)
  %49 = load %struct.sk_buff*, %struct.sk_buff** %12, align 8
  %50 = call %struct.sock_exterr_skb* @SKB_EXT_ERR(%struct.sk_buff* %49)
  store %struct.sock_exterr_skb* %50, %struct.sock_exterr_skb** %11, align 8
  %51 = load %struct.msghdr*, %struct.msghdr** %7, align 8
  %52 = load i32, i32* %9, align 4
  %53 = load i32, i32* %10, align 4
  %54 = load %struct.sock_exterr_skb*, %struct.sock_exterr_skb** %11, align 8
  %55 = getelementptr inbounds %struct.sock_exterr_skb, %struct.sock_exterr_skb* %54, i32 0, i32 0
  %56 = call i32 @put_cmsg(%struct.msghdr* %51, i32 %52, i32 %53, i32 4, i32* %55)
  %57 = load i32, i32* @MSG_ERRQUEUE, align 4
  %58 = load %struct.msghdr*, %struct.msghdr** %7, align 8
  %59 = getelementptr inbounds %struct.msghdr, %struct.msghdr* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = or i32 %60, %57
  store i32 %61, i32* %59, align 4
  %62 = load i32, i32* %13, align 4
  store i32 %62, i32* %14, align 4
  br label %63

63:                                               ; preds = %44, %43
  %64 = load %struct.sk_buff*, %struct.sk_buff** %12, align 8
  %65 = call i32 @kfree_skb(%struct.sk_buff* %64)
  br label %66

66:                                               ; preds = %63, %21
  %67 = load i32, i32* %14, align 4
  ret i32 %67
}

declare dso_local %struct.sk_buff* @sock_dequeue_err_skb(%struct.sock*) #1

declare dso_local i32 @skb_copy_datagram_msg(%struct.sk_buff*, i32, %struct.msghdr*, i32) #1

declare dso_local i32 @sock_recv_timestamp(%struct.msghdr*, %struct.sock*, %struct.sk_buff*) #1

declare dso_local %struct.sock_exterr_skb* @SKB_EXT_ERR(%struct.sk_buff*) #1

declare dso_local i32 @put_cmsg(%struct.msghdr*, i32, i32, i32, i32*) #1

declare dso_local i32 @kfree_skb(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
